--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,4 +16,4 @@ spec:
       containers:
         - name: krampoline
           # 여러분의 image 주소를 입력해주세요.
-          image: fuhsd-xkdomvciyl.krampoline.com
+          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_53f9c2cc023b
